<resources>
    <string name="app_name">Smart Gym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lina Paola</string>
    <string name="nav_header_subtitle">LinaP1987@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <integer name="Splash_Screen_animation_duration">4000</integer>
    <string name="title_activity_dias_restantes">Dias restantes</string>
    <string name="titulo_asistencias">Asistencias</string>
    <string name="registro_asistencias">Registro de asistencias</string>
    <string name="titulo_medidas">Medidas</string>
    <string name="titulo_noticias">Noticias</string>
    <string name="acerca">Acerca de nosotros</string>
    <string name="logo_inicio">imagen de inicio para el splash</string>
    <string name="logotipo_app">Logotipo de la aplicacion</string>
    <string name="registro_pagos">Registro de pagos</string>
    <string name="correo">Digite su correo</string>
    <string name="password">Digite su contraseña</string>
    <string name="t_c_n">N°</string>
    <string name="t_c_fp">Fecha pago</string>
    <string name="t_c_fa">Fecha asistencia</string>
    <string name="t_c_vp">Valor pago</string>
    <string name="titulo_developer">Equipo desarollador</string>
    <string name="id_publicidad_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_publicidad_pantalla_completa">ca-app-pub-3940256099942544/1033173712</string>
</resources>
