<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:text="@string/registro_pagos"
            android:textColor="@color/verde"
            android:textSize="30sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/listview_pagos"
        android:layout_width="0dp"
        android:layout_height="584dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no" />

    <TextView
        android:id="@+id/no"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/t_c_n"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="110dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/t_c_fp"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/valor"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/t_c_vp"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fecha"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>





