<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/registro_asistencias"
            android:textColor="@color/verde"
            android:textSize="30sp"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/t_c_n"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="164dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/t_c_fa"
        android:textColor="@color/negro"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ListView
        android:id="@+id/listview_asistencias"
        android:layout_width="0dp"
        android:layout_height="493dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no"
        app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>





